[gd_scene format=3 uid="uid://nkccp7tqucmv"]

[ext_resource type="Script" uid="uid://br8jg2cv5rmlc" path="res://src/ui/in_game/hud.gd" id="1_3k8yq"]
[ext_resource type="PackedScene" uid="uid://b2xkqxwyfnvwi" path="res://src/ui/player_display.tscn" id="2_5pipe"]

[node name="HUD" type="Control" unique_id=53009314]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3k8yq")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2124395983]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1060112876]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Player1Display" parent="MarginContainer/HBoxContainer" unique_id=1738070447 instance=ExtResource("2_5pipe")]
layout_mode = 2
label_name = "Player 1"

[node name="Player2Display" parent="MarginContainer/HBoxContainer" unique_id=949735045 instance=ExtResource("2_5pipe")]
layout_mode = 2
label_name = "Player 2"

[node name="Player3Display" parent="MarginContainer/HBoxContainer" unique_id=429529330 instance=ExtResource("2_5pipe")]
layout_mode = 2
label_name = "Player 3"

[node name="Player4Display" parent="MarginContainer/HBoxContainer" unique_id=1113269457 instance=ExtResource("2_5pipe")]
layout_mode = 2
label_name = "Player 4"
